syntax = "proto3";

service Daemon {
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
  rpc SignupUser (SignupUserRequest) returns (LoginUserResponse) {}
  rpc InviteUser (InviteUserRequest) returns (InviteUserResponse) {}

  rpc CreateEvent (CreateEventRequest) returns (stream EventStatus) {}
  rpc StopEvent (StopEventRequest) returns (stream EventStatus) {}
  rpc ListEvents (ListEventsRequest) returns (ListEventsResponse) {}
  rpc ListEventGroups (ListEventGroupsRequest) returns (ListEventGroupsResponse) {}
  rpc RestartGroupLab (RestartGroupLabRequest) returns (stream EventStatus) {}
}

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  string token = 1;
  string error = 2;
}

message SignupUserRequest {
  string key = 1;
  string username = 2;
  string password = 3;
}

message InviteUserRequest {}
message InviteUserResponse {
  string key = 1;
  string error = 2;
}

message CreateEventRequest {
  string name = 1;
  string tag = 2;
  repeated string frontends = 3;
  repeated string exercises = 4;
  int32 buffer = 5;
  int32 capacity = 6;
}

message ListEventsRequest {}
message ListEventsResponse {
  message Events {
    string name = 1;
    string tag = 2;
    repeated string frontends = 3;
    repeated string exercises = 4;
    int32 buffer = 5;
    int32 capacity = 6;
  }

  repeated Events events = 1;
}

message ListEventGroupsRequest {
  string tag = 1;
}
message ListEventGroupsResponse {
  message Groups {
    string Name = 1;
    string LabTag = 2;
  }
  repeated Groups groups = 1;
}

message RestartGroupLabRequest {
  string eventTag = 1;
  string labTag = 2;
}

message StopEventRequest {
  string tag = 1;
}

message EventStatus {
  string entity = 1;
  string status = 2;
}

